# plonky2-u32

./: Cargo.toml
.github/workflows/: continuous-integration.yml
src/gadgets/: arithmetic_u32.rs  multiple_comparison.rs
src/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  range_check_u32.rs  subtraction_u32.rs
