[package]
name = "plonky2_u32"
description = "u32 gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/plonky2"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
num = { version = "0.4", default-features = false }
plonky2 = { git = "https://github.com/0xPARC/plonky2", rev = "3defd60532c8693cf5e9d2e6a8412c77ca58760f" }

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
